--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>task timeline</h1>
+        <h1>kids who are simps</h1>
         <p id="date"></p>
         <ul>
-            <li class="list">edit the head</li>
-            <li class="list">edit the body</li>
-            <li>link to javascript</li>
+            <li class="list">kyle</li>
         </ul>
         <script src="app.js"></script>
         <noscript>you need to enable javascript</noscript>
