--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li class="list">kyle</li>
         </ul>
-        <img src="sftp://3583155@f27-preview.:221/carsonihrke.atwebpages.com/IMG_E0416.JPG" alt="">
+        <a href="https://ibb.co/xFG6VxC"><img src="https://i.ibb.co/mNt4QfD/IMG-E0416.jpg" alt="IMG-E0416" border="0"></a>
         <script src="app.js"></script>
         <noscript>you need to enable javascript</noscript>
     </body>
